fix notification text wrapping on mobile

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 20px;
+    white-space: nowrap;
     opacity: 0;
     transition: .2s;
 }
